gcc/testsuite/g++.dg/template/crash78.C
// PR c++/35077

template<typename=int struct A __attribute((aligned(4))); // { dg-error "declaration|expected" }
